# ORBIT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  bidirectional_junction_plan.md  carla_xodr.md  pyproject.toml  refactoring.md  run_orbit.py  start_orbit
.github/workflows/: ci.yml
docs/: DEV_GUIDE.md  DEV_PRINCIPLES.md  GEOREFERENCING.md  GEOREFERENCING_GUIDE.md  OSM_IMPORT.md  OSM_IMPORT_GUIDE.md  USER_GUIDE.md  VALIDATION.md  VALIDATION_AND_UNCERTAINTY.md
examples/: README.md  saro_fixed_bidirectional.xodr
examples/SaroRound/: .#SaroRound_original_export.osm  SaroRound_2lane.orbit  SaroRound_2lane.osm  SaroRound_2lane.xodr  SaroRound_2laneU.orbit  SaroRound_2laneU.xodr  SaroRound_2lane_fix.orbit  SaroRound_2lane_fix.xodr  SaroRound_adjusted.orbit  SaroRound_adjusted.xodr  SaroRound_coords_visualmarkers.csv  SaroRound_geo.orbit  SaroRound_georef.json  SaroRound_large.osm  SaroRound_large.xodr  SaroRound_orbitexport.osm  SaroRound_original_export.osm  SaroRound_osm.orbit  SaroRound_osmlarge.orbit
examples/SaroRoundNew/: SaroRound_2laneU.orbit  SaroRound_2laneU_adj.orbit  SaroRound_2laneU_adj.xodr  SaroRound_geo.orbit  SaroRound_large.orbit  SaroRound_large2.orbit  VIDp_2025-10-16T134059CEST_D_ff_georef.json  saro_fixed_bidirectional_wider_2lane_gemini.xodr
orbit/: __init__.py  roundabout_creator.py
orbit-georef/: LICENSE  README.md  pyproject.toml
orbit-georef/src/orbit_georef/: __init__.py  io.py  models.py  test.py  transformer.py
orbit-georef/tests/: test_transformer.py
orbit/export/: __init__.py  curve_fitting.py  georef_export.py  lane_analyzer.py  lane_builder.py  layout_mask_exporter.py  object_builder.py  opendrive_writer.py  osm_mappings.py  osm_writer.py  parking_builder.py  reference_line_sampler.py  reference_validator.py  signal_builder.py
orbit/gui/: __init__.py  base_dialog.py  connecting_road_dialog.py  constants.py  csv_control_point_placer.py  csv_import_dialog.py  export_dialog.py  georeference_dialog.py  image_view.py  import_report_dialog.py  junction_debug_graphics.py  junction_dialog.py  lane_properties_dialog.py  main_window.py  message_helpers.py  object_graphics.py  object_graphics_item.py  object_properties_dialog.py  object_selection_dialog.py  opendrive_import_dialog.py  osm_import_dialog.py  polyline_properties_dialog.py  preferences_dialog.py  project_controller.py  properties_dialog.py  section_properties_dialog.py  signal_graphics.py  signal_graphics_item.py  signal_properties_dialog.py  signal_selection_dialog.py  uncertainty_overlay.py  undo_commands.py
orbit/gui/dialogs/: __init__.py  base_dialog.py  batch_delete_dialog.py  connecting_road_dialog.py  csv_import_dialog.py  export_dialog.py  georeference_dialog.py  import_report_dialog.py  junction_dialog.py  junction_group_dialog.py  landuse_selection_dialog.py  lane_connection_dialog.py  lane_properties_dialog.py  merge_sections_dialog.py  object_properties_dialog.py  object_selection_dialog.py  opendrive_import_dialog.py  osm_import_dialog.py  parking_properties_dialog.py  parking_selection_dialog.py  polyline_properties_dialog.py  preferences_dialog.py  properties_dialog.py  road_lane_links_dialog.py  roundabout_wizard_dialog.py  section_properties_dialog.py  signal_properties_dialog.py  signal_selection_dialog.py
orbit/gui/graphics/: __init__.py  adjustment_ghost_overlay.py  connecting_road_item.py  interactive_lane.py  junction_debug_graphics.py  junction_item.py  lane_item.py  object_graphics.py  object_graphics_item.py  parking_item.py  polyline_item.py  signal_graphics.py  signal_graphics_item.py  uncertainty_overlay.py
orbit/gui/utils/: __init__.py  combo_utils.py  csv_control_point_placer.py  message_helpers.py  scale_utils.py
orbit/gui/widgets/: __init__.py  adjustment_panel.py  elements_tree.py  road_tree.py
orbit/import/: __init__.py  junction_analyzer.py  opendrive_coordinate_transform.py  opendrive_geometry.py  opendrive_importer.py  opendrive_parser.py  osm_importer.py  osm_mappings.py  osm_parser.py  osm_query.py  osm_to_orbit.py  roundabout_handler.py
orbit/models/: __init__.py  connecting_road.py  junction.py  lane.py  lane_connection.py  lane_section.py  object.py  parking.py  polyline.py  project.py  road.py  sign_library.py  sign_library_manager.py  signal.py  types.py
orbit/signs/: __init__.py
orbit/signs/se/: manifest.json
orbit/utils/: __init__.py  adjustment_fitter.py  connecting_road_alignment.py  coordinate_transform.py  enum_formatting.py  gcp_analyzer.py  geometry.py  geometry_validator.py  lane_fitting.py  logging_config.py  reproject.py  tile_fetcher.py  uncertainty_estimator.py  validators.py
tests/: README.md  conftest.py
tests/test_data/: BorasEkas_coords_2025-09-25_C2.csv  control_points_with_pixels.csv  ekas_from_overpass2.orbit  ekas_geo2.orbit
tests/unit/test_export/: test_coordinate_transform.py  test_curve_fitting.py  test_georef_export.py  test_lane_analyzer.py  test_lane_builder.py  test_layout_mask_exporter.py  test_object_builder.py  test_opendrive_writer.py  test_parking_builder.py  test_reference_line_sampler.py  test_reference_validator.py  test_signal_builder.py
tests/unit/test_import/: __init__.py  test_junction_analyzer.py  test_opendrive_coordinate_transform.py  test_opendrive_dataclasses.py  test_opendrive_geometry.py  test_opendrive_importer.py  test_opendrive_parser.py  test_osm_importer.py  test_osm_mappings.py  test_osm_parser.py  test_osm_query.py  test_osm_to_orbit.py  test_roundabout_handler.py
tests/unit/test_models/: test_connecting_road.py  test_junction.py  test_lane.py  test_lane_connection.py  test_lane_section.py  test_object.py  test_parking.py  test_polyline.py  test_project.py  (+5 more)
tools/: maintainability_report.py
(+13 files in other folders)
