[project]
name = "orbit"
version = "0.5.0"
description = "OpenDrive Road Builder from Imagery Tool"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ORBIT Contributors" }
]

dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "lxml>=4.9.0",
    "pyproj>=3.6.0",
    "xmlschema>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
orbit = "run_orbit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
