[project]
name = "orbit"
version = "0.8.0"
description = "OpenDrive Road Builder from Imagery Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "RISE Research Institutes of Sweden"},
]
keywords = ["opendrive", "road-network", "annotation", "gis", "georeferencing", "asam"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "lxml>=4.9.0",
    "pyproj>=3.6.0",
    "xmlschema>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/RI-SE/ORBIT"
Repository = "https://github.com/RI-SE/ORBIT"
Documentation = "https://github.com/RI-SE/ORBIT/tree/main/docs"
Issues = "https://github.com/RI-SE/ORBIT/issues"
Changelog = "https://github.com/RI-SE/ORBIT/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.8.0",
]

[project.scripts]
orbit = "run_orbit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --strict-markers --tb=short -ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI components",
]
norecursedirs = [".git", ".venv*", "venv*", "__pycache__", "*.egg-info", "dist", "build", "docs", "dev_plans"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Import order is intentional to avoid circular imports
"orbit/gui/dialogs/__init__.py" = ["I001"]
"orbit/gui/utils/__init__.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["orbit"]
