[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit-georef"
version = "0.1.0"
description = "Georeferencing library for pixel↔geo coordinate transformation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ORBIT Project" },
]
keywords = ["georeferencing", "coordinates", "gis", "transformation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.20.0",
    "pyproj>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/RI-SE/ORBIT"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit_georef"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
